# ifm-ruta

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  MIGRATION.md  PHASE_4_IMPLEMENTATION.md  PHASE_4_INDEX.md  QUICK_START_RELEASE.md  RELEASE_CHECKLIST.md
.github/workflows/: quality.yml
.upgrade/: AGENT_QUICK_START.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  PHASES_1_2_3_SUMMARY.md  PHASE_1.md  PHASE_1_IMPLEMENTATION_COMPLETE.md  PHASE_1_PROGRESS.md  PHASE_1_SUMMARY.txt  PHASE_1_TEST_RESULTS.md  PHASE_2.md  PHASE_2_IMPLEMENTATION.md  PHASE_2_START_HERE.md  PHASE_3.md  PHASE_3_IMPLEMENTATION.md  PHASE_4.md  PHASE_4_COMPLETE.md  QUICK_COMMANDS.md  README.md  THREAD_SUMMARY_001.md  UPGRADE_INDEX.md  UPGRADE_PLAN_2026.md  UPGRADE_README.md  UPGRADE_SUMMARY.txt  VERIFICATION_COMPLETE.md
core/: Cargo.toml
core/src/: lib.rs
core/src/security/: input_validator.rs  mod.rs  path_validator.rs
core/src/services/: conversation_storage.rs  metrics.rs  mod.rs  tool_registry.rs
core/src/traits/: async_tool.rs  mod.rs
core/src/utils/: mod.rs  validator.rs
core/tests/: metrics_tests.rs  protocol_tests.rs  tool_registry_tests.rs
scripts/: release.sh  test-mcp.sh  verify-quality.sh
unified/: Cargo.toml
unified/src/: main.rs
unified/src/mcp/: mod.rs  protocol.rs  sampling.rs  server.rs  streaming.rs
unified/src/tools/: interactive_feedback.rs  mod.rs  schemas.rs
