[package]
name = "ifm-ruta-unified"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified IFM-Ruta application with both GUI and MCP server"

[[bin]]
name = "ifm-ruta"
path = "src/main.rs"

[dependencies]
# Core dependencies
ifm-ruta-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

# MCP dependencies
mcp = "0.1.0"

# Async support - Phase 1
async-trait.workspace = true
pin-project.workspace = true

# GUI dependencies
eframe = "0.28"
egui = "0.28"

# Process management
sysinfo.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
log = "0.4"
env_logger = "0.11"

# Font support
include_dir = "0.7"

# Async utilities
futures.workspace = true

# Serialization
serde_yaml.workspace = true

# Stream utilities - Phase 2
async-stream.workspace = true
